--- a/index.html
+++ b/index.html
@@ -45,75 +45,27 @@
                     </a>
                 </div>
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
-                    <input
-                        type="password"
-                        name="masterPass"
-                        value=""
-                        id="masterPass"
-                        class="validate fieldOn large"
-                        onfocus="$(this).select();"
-                        onclick="$(this).select();"
-                        title="Choose a strong Master Password."
-                        autocomplete="off"
-                        autocorrect="off"
-                        autocapitalize="off"
-                        spellcheck="false"
-                        tabindex="1"
-                        style=""
-                        />
+                    <input type="password" name="masterPass" value="" id="masterPass" class="validate fieldOn large" onfocus="$(this).select();" onclick="$(this).select();" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off"
+                        spellcheck="false" tabindex="1" style="" />
                     <label for="master">Master Password:</label>
                 </div>
             </header>
             <div class="row">
                 <div class="input-field col s12 m6 l6">
-                    <input
-                        type="text"
-                        name="siteName"
-                        value=""
-                        id="siteName"
-                        class="fieldOn"
-                        onfocus="$(this).select();"
-                        onclick="$(this).select();"
-                        title="Please enter a doman or site name."
-                        autocomplete="off"
-                        autocorrect="off"
-                        autocapitalize="off"
-                        spellcheck="false"
-                        tabindex="2"
-                        style=""
-                        />
+                    <input type="text" name="siteName" value="" id="siteName" class="fieldOn" onfocus="$(this).select();" onclick="$(this).select();" title="Please enter a doman or site name." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="2"
+                        style="" />
                     <label for="site">Site Name:</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input
-                        type="text"
-                        name="userProfile"
-                        value=""
-                        id="userProfile"
-                        class="fieldOff"
-                        onfocus="$(this).select();"
-                        onclick="$(this).select();"
-                        title="Please enter a valid username or profile."
-                        autocomplete="off"
-                        autocorrect="off"
-                        autocapitalize="off"
-                        spellcheck="false"
-                        tabindex="3"
-                        style=""
-                        />
+                    <input type="text" name="userProfile" value="" id="userProfile" class="fieldOff" onfocus="$(this).select();" onclick="$(this).select();" title="Please enter a valid username or profile." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+                        tabindex="3" style="" />
                     <label for="profile">User Profile:</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s4 m2 l2">
                     <!--<div for="countVal" style="font-size: 0.8rem;">Characters:</div>-->
-                    <select
-                        name="charLength"
-                        id="charLength"
-                        onchange="generatePassword();"
-                        onkeypress="generatePassword();"
-                        tabindex="4"
-                        >
+                    <select name="charLength" id="charLength" onchange="generatePassword();" onkeypress="generatePassword();" tabindex="4">
                                 <option value="8">8</option>
                                 <option value="12">12</option>
                                 <option value="16" selected>16</option>
@@ -126,42 +78,19 @@
                     <label>Lenght:</label>
                 </div>
                 <div class="input-field col s4 m2 l2">
-                    <input
-                        type="number"
-                        id="year"
-                        value="document.write(currentYear);"
-                        autocomplete="off"
-                        autocorrect="off"
-                        autocapitalize="off"
-                        spellcheck="false"
-                        tabindex="5"
-                        />
+                    <input type="number" id="year" value="document.write(currentYear);" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="5" />
                     <labelfor="yearNum" id="yearLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="Yearly password change.">
                         Year:
-                    </label>
+                        </label>
                 </div>
                 <div class="input-field col s4 m2 l2">
-                    <input
-                        type="number"
-                        id="seedNum"
-                        autocomplete="off"
-                        autocorrect="off"
-                        autocapitalize="off"
-                        spellcheck="false"
-                        tabindex="6"
-                        />
+                    <input type="number" id="seedNum" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="6" />
                     <label for="seedNum" id="seedNumLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="Change the number to generate a new password.">
                         Seed:
                     </label>
                 </div>
                 <div class="input-field col s6 m3 l3">
-                    <select
-                        name="passType"
-                        id="passType"
-                        onchange="generatePassword();"
-                        onkeypress="generatePassword();"
-                        tabindex="7"
-                        >
+                    <select name="passType" id="passType" onchange="generatePassword();" onkeypress="generatePassword();" tabindex="7">
                                 <option value="password" class="light-blue">Password</option>
                                 <!--<option value="username">USERNAME</option>-->
                                 <option value="pin">PIN</option>
@@ -224,26 +153,14 @@
             </div>
             <div class="row">
                 <div class="input-field col s12 m12 l12">
-                    <input
-                        type="password"
-                        class="domainPassword"
-                        name="domainPassword"
-                        id="domainPassword"
-                        placeholder="Domain Password:"
-                        readonly="true"
-                        autocomplete="off"
-                        autocorrect="off"
-                        autocapitalize="off"
-                        spellcheck="false"
-                        style=""
-                        />
+                    <input type="password" class="domainPassword" name="domainPassword" id="domainPassword" placeholder="Domain Password:" readonly="true" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" style="" />
                     <label for="result"></label>
                 </div>
             </div>
         </form>
         <footer class="white" style="margin:0;padding:1vmin 4vmin;">
             <div class="col s12 m12 l12">
-                <button type="submit" class="waves-effect waves-light btn light-blue z-depth-0" style="margin-right:22px;" onclick="saveForm();">Save</button>
+                <button type="submit" class="waves-effect waves-light btn light-blue z-depth-0 tooltipped" data-position="top" data-delay="100" data-tooltip="TEST! SAVE DISABLED" style="margin-right:22px;" onclick="saveForm();">Save</button>
                 <button type="reset" class="waves-effect waves-light btn light-blue z-depth-0" onclick="clearForm();">Clear</button>
                 <a class="right modal-trigger" href="#about">
                     <i class="material-icons">info_outline</i>
@@ -256,27 +173,39 @@
         <div id="about" class="modal modal-fixed-footer">
             <div class="modal-content">
                 <article>
-                    <h1><a id="Passcloud_20_0"></a>Passcloud 2.0</h1>
+                    <h1>
+                        <a id="Passcloud_20_0"></a>Passcloud 2.0</h1>
                     <p>Alpha testing of 2.0: <a href="https://passcld.herokuapp.com/">https://passcld.herokuapp.com/</a></p>
-                    <p><a href="https://heroku.com/deploy?template=https://github.com/spencerthayer/Passcloud"><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy"></a></p>
-                    <h2><a id="What_is_Passcloud_6"></a>What is Passcloud?</h2>
+                    <p>
+                        <a href="https://heroku.com/deploy?template=https://github.com/spencerthayer/Passcloud"><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy"></a>
+                    </p>
+                    <h2>
+                        <a id="What_is_Passcloud_6"></a>What is Passcloud?</h2>
                     <p>For most people, passwords are a real problem. Remembering passwords is a pain and using the same password everywhere will eventually lead to a disaster. While traditional password managers solve this with lots of random passwords</p>
-                    <p>they have to save your passwords in their databases. This makes your lists of passwords vulnerable to hacking and interception.<br>
-                    Passcloud attempts to solve the problem other password managers have by never storing your passwords. Instead, Passcloud generates pseudo-random passwords based on the Mersenne Twister PRNG algorithm. Users combine the same repeatable information based on a master password and always get the same unique password.</p>
+                    <p>they have to save your passwords in their databases. This makes your lists of passwords vulnerable to hacking and interception.<br> Passcloud attempts to solve the problem other password managers have by never storing your passwords.
+                        Instead, Passcloud generates pseudo-random passwords based on the Mersenne Twister PRNG algorithm. Users combine the same repeatable information based on a master password and always get the same unique password.</p>
                     <p>By using Passcloud for every site you visit you’re less vulnerable to security breaches, even if one password is compromised all of your other passwords generated from the same Passcloud remains secure!</p>
-                    <h2><a id="Nothing_to_Hack_15"></a>Nothing to Hack</h2>
-                    <p>With Passcloud there is nothing to intercept since it uses client-side JavaScript and avoids sending sensitive data across a network, making it one of the most secure password managers available. Passcloud is based on a stateless algorithm which frees it from the reliance on storage of secrets.</p>
-                    <p>Since your generated passwords aren’t saved to your device, there is no risk you’ll be forced to divulge them to aggressive peers. And since these passwords don’t need to be backed up or synchronized between devices over the network,there is no risk of them getting intercepted.</p>
-                    <p>Finally, Passcloud is free software (GPLv3), its algorithm extensively documented and does not require you to trust any external party. This is particularly interesting in a society where things like PRISM and gag orders are a real threat.</p>
-                    <h2><a id="Always_In_Sync_23"></a>Always In Sync</h2>
+                    <h2>
+                        <a id="Nothing_to_Hack_15"></a>Nothing to Hack</h2>
+                    <p>With Passcloud there is nothing to intercept since it uses client-side JavaScript and avoids sending sensitive data across a network, making it one of the most secure password managers available. Passcloud is based on a stateless algorithm
+                        which frees it from the reliance on storage of secrets.</p>
+                    <p>Since your generated passwords aren’t saved to your device, there is no risk you’ll be forced to divulge them to aggressive peers. And since these passwords don’t need to be backed up or synchronized between devices over the network,there
+                        is no risk of them getting intercepted.</p>
+                    <p>Finally, Passcloud is free software (GPLv3), its algorithm extensively documented and does not require you to trust any external party. This is particularly interesting in a society where things like PRISM and gag orders are a real
+                        threat.
+                    </p>
+                    <h2>
+                        <a id="Always_In_Sync_23"></a>Always In Sync</h2>
                     <p>No cloud provider to trust, no backups to maintain and no data connection for keeping in sync. Contrary to other password solutions, Passcloud doesn’t need to send your passwords over the network to make them ubiquitously available.</p>
                     <p>Just add your information into each of your devices and your passwords will be available instantly on all of them.</p>
                     <p>No cloud provider to trust, no backups to maintain and no data connection for keeping in sync. Since Passcloud generates your passwords on-demand based on your user name and Passcloud, you don’t have any of these fragile dependencies.</p>
                     <p>This gives you massive availability advantages, but also helps thwart man-in-the-middle attacks, snooping and trust issues related to cloud providers.</p>
-                    <p>Since Passcloud generates your passwords on-demand based on your information and master password, you don’t have any of these fragile dependencies. This gives you massive availability advantages but also helps thwart man-in-the-middle attacks, snooping and trust issues related to cloud providers.</p>
-                    <h2><a id="For_Any_Purpose_34"></a>For Any Purpose</h2>
-                    <p>Passcloud comes with a variety of built-in password types. These types make your password look different, become more secure or more compatible with a site’s password policy.<br>
-                    Passcloud also implements a solution that allows you to save custom information in the app. This information is AES encrypted using a large key derived from your master password.</p>
+                    <p>Since Passcloud generates your passwords on-demand based on your information and master password, you don’t have any of these fragile dependencies. This gives you massive availability advantages but also helps thwart man-in-the-middle
+                        attacks, snooping and trust issues related to cloud providers.</p>
+                    <h2>
+                        <a id="For_Any_Purpose_34"></a>For Any Purpose</h2>
+                    <p>Passcloud comes with a variety of built-in password types. These types make your password look different, become more secure or more compatible with a site’s password policy.<br> Passcloud also implements a solution that allows you
+                        to save custom information in the app. This information is AES encrypted using a large key derived from your master password.</p>
                 </article>
             </div>
             <div class="modal-footer">
